# pytest-checkdocs

./: .coveragerc  .travis.yml  CHANGES.rst  NEWS.rst  README.rst  mypy.ini  pyproject.toml  pytest_checkdocs.py  setup.cfg  tox.ini
.github/workflows/: main.yml
docs/: conf.py  index.rst
newsfragments/: +545bf84b.feature.rst  19.feature.rst  23.feature.rst  25.feature.1.rst  26.feature.rst
pytest_checkdocs/: __init__.py  py310compat.py
pytest_checkdocs/compat/: docutils21.py
