[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-checkdocs"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "check the README when running tests"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Framework :: Pytest",
]
requires-python = ">=3.8"
dependencies = [
	"docutils >= 0.15",
	"jaraco.packaging >= 9.5",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jaraco/pytest-checkdocs"

[project.optional-dependencies]
testing = [
	# upstream
	"pytest >= 6, != 8.1.*",
	"pytest-checkdocs >= 2.4",
	"pytest-cov",
	"pytest-mypy",
	"pytest-enabler >= 2.2",
	"pytest-ruff >= 0.2.1",

	# local
	"types-docutils", # pytest-checkdocs#13
]
docs = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

[project.entry-points]
pytest11 = {checkdocs = "pytest_checkdocs"}

[tool.setuptools_scm]
