[build-system]
requires = [
	"setuptools>=77",
	"setuptools_scm[toml]>=3.4.1",
	# jaraco/skeleton#174
	"coherent.licensed",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-checkdocs"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "check the README when running tests"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Framework :: Pytest",
]
requires-python = ">=3.9"
license = "MIT"
dependencies = [
	"docutils >= 0.15",
	"jaraco.packaging >= 9.5",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jaraco/pytest-checkdocs"

[project.optional-dependencies]
test = [
	# upstream
	"pytest >= 6, != 8.1.*",

	# local
]

doc = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

check = [
	"pytest-checkdocs >= 2.4",
	"pytest-ruff >= 0.2.1; sys_platform != 'cygwin'",
]

cover = [
	"pytest-cov",
]

enabler = [
	"pytest-enabler >= 3.4",
]

type = [
	# upstream
	"pytest-mypy >= 1.0.1",

	## workaround for python/mypy#20454
	"mypy < 1.19; python_implementation == 'PyPy'",

	# local
	"types-docutils", # pytest-checkdocs#13
	"importlib_metadata; python_version < '3.12'",
	"pytest>=8.3.3" # Typing fixes not necessary at runtime
]


[project.entry-points]
pytest11 = {checkdocs = "pytest_checkdocs"}


[tool.setuptools_scm]
