[metadata]
name = pytest-checkdocs
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = check the README when running tests
long_description = file:README.rst
url = https://github.com/jaraco/pytest-checkdocs
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Framework :: Pytest

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.6
install_requires =
	docutils >= 0.15
	pep517
	importlib_metadata >= 4

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 4.6
	pytest-checkdocs >= 2.4
	pytest-flake8
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.0.1

	# local
	types-docutils  # pytest-checkdocs#13

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]
pytest11 =
	checkdocs = pytest_checkdocs
